HTMLテンプレート2

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
     <footer>
-        <p>Copyright Sample-Site 2019</p>
+        <p>Copyright &copy; Sample-Site 2019</p>
     </footer>
 </body>
 </html>
